{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 30,
  "lineage": "0737d37c-a2b4-401a-774f-764a21c3bc9c",
  "resources": [
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090f6bd7acc781473",
            "domain": "vpc",
            "id": "eipalloc-090f6bd7acc781473",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-205-83-2.compute-1.amazonaws.com",
            "public_ip": "52.205.83.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nat-us-east-1a"
            },
            "tags_all": {
              "Name": "eks-nat-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8f6edf5fdbdb109",
            "domain": "vpc",
            "id": "eipalloc-0b8f6edf5fdbdb109",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-218-52-108.compute-1.amazonaws.com",
            "public_ip": "44.218.52.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nat-us-east-1b"
            },
            "tags_all": {
              "Name": "eks-nat-us-east-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:internet-gateway/igw-02a95ab564993342d",
            "id": "igw-02a95ab564993342d",
            "owner_id": "211125583282",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-02babfee2e40cc6c5"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090f6bd7acc781473",
            "association_id": "eipassoc-0404112eec74c053d",
            "connectivity_type": "public",
            "id": "nat-023ee18fc08085e83",
            "network_interface_id": "eni-048ce48e59b3bb7fb",
            "private_ip": "10.0.101.120",
            "public_ip": "52.205.83.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-050cd1522d458f9fa",
            "tags": {
              "Name": "eks-nat-us-east-1a"
            },
            "tags_all": {
              "Name": "eks-nat-us-east-1a"
            }
          },
          "dependencies": [
            "module.eks_vpc.aws_eip.nat",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8f6edf5fdbdb109",
            "association_id": "eipassoc-0d5bf7aff8b5bbf62",
            "connectivity_type": "public",
            "id": "nat-06501b7fc1330a79f",
            "network_interface_id": "eni-0607bcb807b4a8628",
            "private_ip": "10.0.102.59",
            "public_ip": "44.218.52.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0423310c276dd05b6",
            "tags": {
              "Name": "eks-nat-us-east-1b"
            },
            "tags_all": {
              "Name": "eks-nat-us-east-1b"
            }
          },
          "dependencies": [
            "module.eks_vpc.aws_eip.nat",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:route-table/rtb-03043ee94cc74ab93",
            "id": "rtb-03043ee94cc74ab93",
            "owner_id": "211125583282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-023ee18fc08085e83",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-us-east-1a"
            },
            "tags_all": {
              "Name": "eks-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-02babfee2e40cc6c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_eip.nat",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_nat_gateway.nat",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:route-table/rtb-0c41adf2ba935c39c",
            "id": "rtb-0c41adf2ba935c39c",
            "owner_id": "211125583282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06501b7fc1330a79f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-us-east-1b"
            },
            "tags_all": {
              "Name": "eks-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-02babfee2e40cc6c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_eip.nat",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_nat_gateway.nat",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:route-table/rtb-0ddd6aa82a4ecc87d",
            "id": "rtb-0ddd6aa82a4ecc87d",
            "owner_id": "211125583282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a95ab564993342d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-us-east-1a"
            },
            "tags_all": {
              "Name": "eks-public-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-02babfee2e40cc6c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:route-table/rtb-01256c1d1f8827208",
            "id": "rtb-01256c1d1f8827208",
            "owner_id": "211125583282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a95ab564993342d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public-us-east-1b"
            },
            "tags_all": {
              "Name": "eks-public-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-02babfee2e40cc6c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0073e440add2f3905",
            "route_table_id": "rtb-03043ee94cc74ab93",
            "subnet_id": "subnet-02af395c27e396441"
          },
          "dependencies": [
            "module.eks_vpc.aws_eip.nat",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_nat_gateway.nat",
            "module.eks_vpc.aws_route_table.private",
            "module.eks_vpc.aws_subnet.private",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02170c7318ac2b333",
            "route_table_id": "rtb-0c41adf2ba935c39c",
            "subnet_id": "subnet-08f53322f2e90903c"
          },
          "dependencies": [
            "module.eks_vpc.aws_eip.nat",
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_nat_gateway.nat",
            "module.eks_vpc.aws_route_table.private",
            "module.eks_vpc.aws_subnet.private",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aae0edb973da0813",
            "route_table_id": "rtb-0ddd6aa82a4ecc87d",
            "subnet_id": "subnet-050cd1522d458f9fa"
          },
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_route_table.public",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094a492895484c0d2",
            "route_table_id": "rtb-01256c1d1f8827208",
            "subnet_id": "subnet-0423310c276dd05b6"
          },
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.igw",
            "module.eks_vpc.aws_route_table.public",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:subnet/subnet-02af395c27e396441",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02af395c27e396441",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125583282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-us-east-1a"
            },
            "tags_all": {
              "Name": "eks-private-us-east-1a"
            },
            "vpc_id": "vpc-02babfee2e40cc6c5"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:subnet/subnet-08f53322f2e90903c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f53322f2e90903c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125583282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-us-east-1b"
            },
            "tags_all": {
              "Name": "eks-private-us-east-1b"
            },
            "vpc_id": "vpc-02babfee2e40cc6c5"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:subnet/subnet-050cd1522d458f9fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050cd1522d458f9fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125583282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-us-east-1a"
            },
            "tags_all": {
              "Name": "eks-public-us-east-1a"
            },
            "vpc_id": "vpc-02babfee2e40cc6c5"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:subnet/subnet-0423310c276dd05b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0423310c276dd05b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125583282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-us-east-1b"
            },
            "tags_all": {
              "Name": "eks-public-us-east-1b"
            },
            "vpc_id": "vpc-02babfee2e40cc6c5"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125583282:vpc/vpc-02babfee2e40cc6c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-023f67e4728964e75",
            "default_route_table_id": "rtb-0b89259a2216f1417",
            "default_security_group_id": "sg-0b3359dfe0c2389b4",
            "dhcp_options_id": "dopt-062090d4977150d53",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02babfee2e40cc6c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b89259a2216f1417",
            "owner_id": "211125583282",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}